# src/routes/api/v1/post.rs
@@ -1,8 +1,10 @@
 use crate::database::DBConnection;
 use crate::http::responders::api::ApiResponse;
-use crate::database::models::posts::post::Post;
-use crate::database::models::posts::forms::NewPost;
 use crate::database::schema::posts;
+use crate::database::models::posts::post::Post;
+use crate::database::models::posts::post::PostMinima;
+use crate::database::models::posts::forms::NewPost;
+use crate::database::models::user::User;
 
 use diesel::prelude::*;
 use rocket::http::Status;
@@ -19,21 +21,39 @@ pub fn allowed_paths() -> Vec<&'static str> {
     vec!["posts"]
 }
 
-#[post("/api/post", format = "json", data = "<post_info>")]
-fn create_post(conn: DBConnection, post_info: Result<Json<NewPost>, JsonError>) -> ApiResponse {
-    match post_info {
-        Ok(info) => {
-            let insert_result = diesel::insert_into(posts::dsl::posts)
-                .values(&*info)
-                .execute(&*conn);
+/// Create a new post. Client data (title, content, auth_token)
+/// + validate `auth_token`
+/// + insert a new post into DB.
+#[post("/api/post", format = "json", data = "<data>")]
+fn create_post(conn: DBConnection, data: Json<NewPost>) -> ApiResponse {
+    let post_request = data.into_inner();
+    let user_id = User::get_id_by_token(&conn, &post_request.author_token);
 
-            match insert_result {
-                Ok(result) => ApiResponse::new(Status::Ok, json!({"success": true, "title": info.title})),
-                Err(e) => ApiResponse::db_error(e),
-            }
-            
+    if let Some(authorid) = user_id {
+        let new_post = PostMinima {
+            title: post_request.title,
+            content: post_request.content,
+            authorid: authorid
+        };
+
+        let insert_result = diesel::insert_into(posts::dsl::posts)
+            .values(&new_post)
+            .execute(&*conn);
+
+        match insert_result {
+            Ok(result) => ApiResponse::new(
+                Status::Ok,
+                json!({
+                    "msg": &format!("Post '{}' of user '{}' inserted succesfully", new_post.title, authorid)
+                })
+            ),
+            Err(e) => ApiResponse::db_error(e),
         }
-        Err(e) => ApiResponse::json_error(e),
+    } else {
+        ApiResponse::error(
+            Status::Unauthorized,
+            "Token not found!."
+        )
     }
 }
 
@@ -43,6 +63,5 @@ fn get_all_posts(conn: DBConnection) -> ApiResponse {
     match Post::get_all_posts(&conn) {
         Ok(posts) => ApiResponse::new(Status::Ok, json!(posts)),
         Err(e) => ApiResponse::db_error(e),
-    
     }
 }
